# prueba_softgic

./: .gitignore  docker-compose.override.yml  docker-compose.yml  requirements.txt
.github/workflows/: test.yml
SOFTGIC_COLLECTION/: DELETE_PLANS.bru  GET_COTIZACIONES.bru  GET_COTIZACIONES_EMISION.bru  GET_PLAN.bru  GET_PLANS.bru  POST_ACCESS_TOKEN.bru  POST_COTIZACIONES.bru  POST_EMISION_CON_COTIZACION.bru  POST_PLANS.bru  PUT_PLANS.bru  bruno.json
SOFTGIC_COLLECTION/environments/: SOFTGIC_ENVIROMENT.bru
backend/: alembic.ini  pyproject.toml
backend/app/: crud.py  models.py  schemas.py
backend/app/alembic/versions/: 043b406fabc0_create_plans_models.py  70b0d18b918b_update_emision_models.py  9ef738148311_initial_migration.py  be9c2efb557d_add_new_models.py  ebf888d1474f_add_emision_models.py
backend/app/api/: main.py
backend/app/api/routes/: cotizaciones.py  emision.py  plans.py
backend/app/assemblers/: cotizaciones.py
backend/app/core/: config.py  db.py
backend/app/services/: cotizaciones.py  emision.py
backend/app/tests/api/routes/: test_plans.py
backend/app/tests/utils/: plan.py
frontend/: vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/client/: models.ts  services.ts
frontend/src/components/Common/: ActionsMenu.tsx  DeleteAlert.tsx  SidebarItems.tsx
frontend/src/components/Plans/: AddPlan.tsx  EditPlan.tsx
frontend/src/routes/_layout/: items.tsx  plans.tsx  quotes.tsx
